[package]
name = "omnia-core-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
ic-cdk = "0.8.1"
serde = "1.0.164"
serde_json = "1.0.97"
sha2 = "0.10.7"
hex = "0.4.3"
ic-ledger-types = "0.5.0"
rand = "0.8.5"
ic-cdk-timers = "0.3.0"
getrandom = { version = "0.2.10", features = ["custom"] }
